--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "watch": "parcel watch",
     "dev": "parcel ./debug/index.html --dist-dir ./.cache",
-    "build": "parcel build"
+    "build": "parcel build --dist-dir ./dist --no-cache"
   },
   "repository": {
     "type": "git",
